--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
-    "react-i18next": "^15.0.3"
+    "react-i18next": "^15.0.3",
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "@types/node": "^20",
